메인페이지 css 수정완료, 카테고리 폰트부분 수정

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -2,12 +2,50 @@
     font-family: 'Noto Sans KR';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/noto_sans/NotoSansKR-Regular.woff'); /* IE9 Compat Modes */
     src: local('Noto Sans KR Regular'), local('NotoSansKR-Regular'),
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.svg#NotoSansKR') format('svg'); /* Legacy iOS */
+    url('../fonts/noto_sans/NotoSansKR-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Regular.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/noto_sans/NotoSansKR-Medium.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Medium'),
+    url('../fonts/noto_sans/NotoSansKR-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Medium.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/noto_sans/NotoSansKR-Thin.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Thin'),
+    url('../fonts/noto_sans/NotoSansKR-Thin.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Thin.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 200;
+    src: url('../fonts/noto_sans/NotoSansKR-Light.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Light'),
+    url('../fonts/noto_sans/NotoSansKR-Light.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Light.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: bold;
+    src: url('../fonts/noto_sans/NotoSansKR-Bold.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Regular'),
+    url('../fonts/noto_sans/NotoSansKR-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Bold.woff') format('woff') /* Modern Browsers */
 }
 
 @font-face {
@@ -27,6 +65,31 @@ url('../fonts/nanum_myeongjo/NanumMyeongjoBold.woff') format('woff'), /* Super M
 url('../fonts/nanum_myeongjo/NanumMyeongjo.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
 url('../fonts/nanum_myeongjo/NanumMyeongjo.woff') format('woff'), /* Super Modern Browsers */
 }
+
+
+@font-face {
+    font-family: 'KCC';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/kcc/KCC.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/kcc/KCC.eot?#iefix') format('embedded-opentype'), /* IE9 Compat Modes */
+    url('../fonts/kcc/KCC.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/kcc/KCC.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Anton';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/anton/anton-v12-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Anton Regular'), local('Anton-Regular'),
+    url('../fonts/anton/anton-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/anton/anton-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/anton/anton-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/anton/anton-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/anton/anton-v12-latin-regular.svg#Anton') format('svg'); /* Legacy iOS */
+}
+
 
 * {
     font-family: Noto Sans KR !Important;
@@ -90,10 +153,11 @@ section {
     /* margin-bottom: 19px; */
     color: #212121;
     letter-spacing: -3px;
+    font-weight: 200;
 }
 
 .section-title strong {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .section-title-color {
@@ -101,7 +165,7 @@ section {
 }
 
 .section-text {
-    font-size: 16px;
+    font-size: 17px;
     color: #222;
     line-height: 27px;
     letter-spacing: -1.5px;
@@ -227,6 +291,7 @@ a {
     font-weight: 600;
     margin-bottom: 59px;
     bottom: 0;
+    font-family: Anton !important;
 }
 
 .detail:after {
@@ -240,7 +305,7 @@ a {
 }
 
 strong {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .section-top-title-left .max-layout-width {
@@ -252,36 +317,38 @@ strong {
 /* treatment-case */
 .treatment-case {
     padding: 93px 0;
-    background: #f5f5f5 url(../images/sub/implant/cmmn/digital_bg3.jpg) center;
+    background: #f5f5f5 url(../images/sub/implant/cmmn/digital_bg.jpg) center;
+    text-align: center;
 }
 
 .treatment-case .treatment-case-slider {
-    width: 868px;
-    height: 329px;
-    overflow: hidden;
+    width: 100%;
+    height: 387px;
+    /* overflow: hidden; */
 }
 
 .treatment-case .max-layout-width {
-    overflow: hidden;
     position: relative;
     padding-bottom: 40px;
+    display: inline-block;
 }
 
 .treatment-case .max-layout-width > div {
-    float: left;
+    float: right;
 }
 
 .treatment-case .max-layout-width .text {
-    width: 432px;
+    width: 100%;
     box-sizing: border-box;
-    padding-left: 63px;
+    text-align: center;
+    color: #fff;
 }
 
 .treatment-case .max-layout-width .text h2 {
     font-size: 32px;
-    color: #222;
+    color: #fff;
     margin-bottom: 40px;
-    font-weight: bold;
+    /* font-weight: bold; */
     letter-spacing: -2.5px;
 }
 
@@ -289,6 +356,7 @@ strong {
     line-height: 1.7;
     word-break: keep-all;
     letter-spacing: -1px;
+    margin-bottom: 56px;
 }
 
 .treatment-case .treatment-case-swiper-slide {
@@ -296,35 +364,76 @@ strong {
 }
 
 .treatment-case .treatment-case-swiper-slide div {
-    width: 434px;
-    height: 329px;
+    width: 650px;
+    height: 387px;
     float: left;
     overflow: hidden;
+    position: relative;
+}
+
+.treatment-case .treatment-case-swiper-slide div.text-title {
+    width: 100%;
+    height: 58px;
+    text-align: center;
+    color: #fff;
+    font-size: 19px;
+    line-height: 58px;
+    position: absolute;
+    bottom: 0;
 }
 
 .treatment-case .left-img1 {
     background: url(../images/sub/implant/cmmn/case_after01.jpg);
 }
 
+.treatment-case .left-img1 div {
+    background: #545454;
+}
+
 .treatment-case .right-img1 {
     background: url(../images/sub/implant/cmmn/case_before01.jpg);
 }
+
+
+.treatment-case .right-img1 div {
+    background: #9b8b7e;
+}
+
 
 .treatment-case .treatment-case-scroll-bar {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 868px;
+    width: 100%;
     height: 3px;
     background: #ccc;
 }
 
 .treatment-case .treatment-case-scroll-bar-drag {
-    width: 289.33px;
+    width: 433.33px;
     background: #76695e;
     height: 3px;
     transition: left 500ms;
     cursor: pointer;
+}
+
+.treatment-case .slick-arrow {
+    position: absolute;
+    top: 50%;
+    width: 27px;
+    height: 45px;
+    z-index: 1000000;
+    cursor: pointer;
+}
+
+.treatment-case .slider-prev {
+    background: url(../images/sub/implant/cmmn/right_arrow02.png) no-repeat center;
+    left: -70px;
+}
+
+.treatment-case .slider-next {
+    background: url(../images/sub/implant/cmmn/left_arrow02.png) no-repeat center;
+    right: -70px;
 }
 
 section.board-link {
@@ -376,7 +485,7 @@ section.board-link ul li {
 }
 
 .board-link ul li p {
-    height: 71px;
+    height: 56px;
     background: #9b8b7e;
     padding-left: 42px;
     padding-right: 35px;
@@ -385,11 +494,11 @@ section.board-link ul li {
 }
 
 .board-link ul li p span:first-child {
-    padding-top: 23px;
+    padding-top: 18px;
     display: block;
-    font-size: 21px;
+    font-size: 19px;
     color: #fff;
-    font-weight: bold;
+    /* font-weight: bold; */
     letter-spacing: -2px;
 }
 
@@ -400,14 +509,20 @@ section.board-link ul li {
     font-size: 18px;
     color: #fff;
     letter-spacing: 1px;
+    text-indent: -9999px;
 }
 
 .board-link ul li p span.view:after {
-    background: url(../images/sub/implant/digital/digital_arrow.png) no-repeat top center;
+    border: 1px solid #fff;
+    background: url(../images/sub/implant/cmmn/more.png) no-repeat center;
     content: '';
     position: absolute;
-    right: -47px;
-    width: 33px;
-    height: 17px;
-    bottom: 0;
+    right: -64px;
+    width: 35px;
+    height: 35px;
+    bottom: -6px;
+}
+
+.header-banner-slider-continer01 img {
+    width: 100%;
 }
